Refactor and expose ShimPatcher for other shims to use; add ShimSupport.classExists()